# craby

./: .gitattributes  .yarnrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Release.toml  biome.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  e2e.yml
crates/craby/: Cargo.toml
crates/craby_build/: Cargo.toml
crates/craby_cli/: Cargo.toml
crates/craby_codegen/: Cargo.toml
crates/craby_core/: Cargo.toml
crates/craby_core/src/: lib.rs  type_bindings.rs
crates/craby_core/src/interop/: mod.rs
crates/craby_core/src/interop/android/: string.rs
crates/craby_core/src/interop/ios/: string.rs
docs/: package.json  source.config.ts
docs/.vitepress/: config.mts
docs/guide/: build.md  cli-commands.md  codegen.md  contributing.md  errors.md  file-io.md  getting-started.md  introduction.md  limitations.md  module-definition.md  showcase.md  signals.md  sync-vs-async.md  types.md
docs/src/: mdx-components.tsx
examples/0.80/: index.js  metro.config.js  package.json
examples/basic-module/: Cargo.toml
examples/craby-test/: .gitignore  Cargo.toml  CrabyTest.podspec  (+1 more)
examples/craby-test/crates/lib/: Cargo.toml  build.rs
examples/craby-test/crates/lib/include/: CrabySignals.h
examples/craby-test/crates/lib/src/: calculator_impl.rs  context.rs  craby_test_impl.rs  ffi.rs  generated.rs  lib.rs  types.rs
scripts/: cargo-release.sh  version.sh
shared/: package.json  tsdown.config.ts
template/: biome.json  package.json  tsconfig.json  {{pascal_name}}.podspec
(+128 files in other folders)
