[package]
name = "craby_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Craby core"
license = "MIT"
repository = "https://github.com/leegeunhyeok/craby"

[dependencies]
craby_common = { path = "../craby_common" }
cbindgen     = "0.29.0"
anyhow       = { workspace = true }
log          = { workspace = true }
serde_json   = { workspace = true }
owo-colors   = { workspace = true }
jni          = { workspace = true, features = ["invocation"], optional = true }

[features]
default = []
android = ["jni"]
ios = []
